--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,61 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guilherme Portifolio</title>
-    <link rel="stylesheet" href="../CSS/loading.css">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/icons.css">
-    <link rel="stylesheet" href="../CSS/header.css">
-    <link rel="stylesheet" href="../CSS/home.css">
-    <link rel="stylesheet" href="../CSS/sign-in.css">
-    <link rel="stylesheet" href="../CSS/sign-up.css">
-    <link rel="stylesheet" href="../CSS/about.css">
-    <link rel="stylesheet" href="../CSS/contact.css">
-    <link rel="stylesheet" href="../CSS/page-up.css">
-    <link rel="stylesheet" href="../CSS/footer.css">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="shorticon icon" type="image/gif" href="../IMAGES/minilogo.ico" sizes="32x32">
-</head>
+    <link rel="stylesheet" href="../CSS/loading.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/icons.css" />
+    <link rel="stylesheet" href="../CSS/header.css" />
+    <link rel="stylesheet" href="../CSS/home.css" />
+    <link rel="stylesheet" href="../CSS/sign-in.css" />
+    <link rel="stylesheet" href="../CSS/sign-up.css" />
+    <link rel="stylesheet" href="../CSS/about.css" />
+    <link rel="stylesheet" href="../CSS/contact.css" />
+    <link rel="stylesheet" href="../CSS/page-up.css" />
+    <link rel="stylesheet" href="../CSS/footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
+    <link
+      rel="shorticon icon"
+      type="image/gif"
+      href="../IMAGES/minilogo.ico"
+      sizes="32x32"
+    />
+  </head>
 
-<body>
+  <body>
     <header id="header">
-
-        <a href="index.html"><img src="../IMAGES/mainlogoblack.png" alt="" id="logo-header"></a>
-        <ul class="navlist">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="product.html">Products</a></li>
-            <li><a href="#portfolio">About Us</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+      <a href="index.html"
+        ><img src="../IMAGES/mainlogoblack.png" alt="" id="logo-header"
+      /></a>
+      <ul class="navlist">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#on-sale">On Sale</a></li>
+        <li><a href="product.html">Products</a></li>
+        <li><a href="#portfolio">About Us</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </header>
 
-<section class="home" id="home">
-    <div class="grid-home-txt">
-    <div class="home-txt">
-        <h4>We are Techmark</h4>
-        <h2>The best Web Marketplace</h2>
-        <h1>With low prices</h1>
-    </div>
-    <div class="home-phone">
-        <div class="slider">
+    <section class="home" id="home">
+      <div class="grid-home-txt">
+        <div class="home-txt">
+          <h4>We are Techmark 	&trade;</h4>
+          <h2>The best Web Marketplace</h2>
+          <h1>With low prices</h1>
+        </div>
+        <div class="home-phone">
+          <div class="slider">
+            <h1>Our New Products</h1>
             <div class="slides">
               <div id="slide-1">
-                <img src="../IMAGES/homephone.png">
+                <img src="../IMAGES/iphone11pm256.png" />
               </div>
               <div id="slide-2">
-                <img src="../IMAGES/homephone2.jpg">
+                <img src="../IMAGES/iphone1264.png" />
               </div>
               <div id="slide-3">
-                <img src="../IMAGES/homephone3.jpg">
+                <img src="../IMAGES/iphone13pm128.png" />
               </div>
               <div id="slide-4">
-                <img src="../IMAGES/homephone2.jpg">
+                <img src="../IMAGES/iphonexsmax.png" />
               </div>
               <div id="slide-5">
-                <img src="../IMAGES/homephone.png">
+                <img src="../IMAGES/motog42.png" />
               </div>
             </div>
             <a href="#slide-1"></a>
@@ -63,11 +73,9 @@
             <a href="#slide-3"></a>
             <a href="#slide-4"></a>
             <a href="#slide-5"></a>
+          </div>
         </div>
-    </div>
-</div>
-</section>
-
-</body>
-
+      </div>
+    </section>
+  </body>
 </html>
